--- a/Altruithm Backend/src/main/resources/application.properties
+++ b/Altruithm Backend/src/main/resources/application.properties
@@ -1,14 +1,12 @@
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/altruithm_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/altruithm_db
 spring.datasource.username=root
 spring.datasource.password=DarkSorcerer@014
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Server Configuration
 server.port=8080
